fix: background image not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@import "background-svg.css";
 @import "hero.css";
 @import "header.css";
 @import "tech-stack.css";
@@ -33,3 +32,20 @@
     padding-right: 2rem;
     border-bottom: solid black;
   }
+
+  .tech-stack, 
+.career-opportunity {
+    background: white;
+}
+
+.hero-banner {
+    background-image:
+    linear-gradient(to top, rgb(255, 255, 255), rgba(14, 42, 71, 0.73)),
+    url("assets/img/code-1839406_1920.webp");
+    background-size: contain;
+}
+
+footer{
+    background-image: url("assets/img/footer-background.webp");
+    background-size: cover;
+}
